# THENOTHING

./: .cursorrules  .dockerignore  .env.example  .gitignore  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cline_mcp_settings.json  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.claude/: README.md  settings.local.json
.claude-plugin/: plugin.json
.claude/commands/: autopilot.md  chain.md  hunt.md  recon.md  report.md  scope.md  status.md  validate.md  web3-audit.md
.cursor/: mcp.json
.github/workflows/: ci.yml
commands/: autopilot.md  chain.md  hunt.md  recon.md  report.md  scope.md  status.md  validate.md  web3-audit.md
hydra/: __init__.py  config.py  main.py
hydra/ai/: __init__.py  parallel.py  router.py  safety.py
hydra/api_security/: __init__.py
hydra/bootstrap/: __init__.py  installer.py
hydra/browser/: __init__.py
hydra/causal/: __init__.py
hydra/chains/: __init__.py  poc_generator.py  validator.py
hydra/cloud_security/: __init__.py
hydra/cognitive/: __init__.py
hydra/cognitive_graph/: __init__.py
hydra/consensus/: __init__.py
hydra/continuous_learning/: __init__.py
hydra/cost/: __init__.py
hydra/dashboard/: __init__.py  (+1 more)
k8s/: prometheus.yml
mcp-bounty-server/: server.py
mcp-writeup-server/: indexer.py  server.py
rag-builder/: ingest.py
skills/: README.md  api_security.md  blind_xss_hunter.md  recon_pipeline.md  report_writer.md  vuln_hunting.md
tests/: test_consensus.py  test_planner.py  test_scope.py
tools/: installer.py
(+88 files in other folders)
