[project]
name = "hydra"
version = "4.0.0"
description = "HYDRA - Next-Gen AI Security Orchestration Platform"
requires-python = ">=3.10"
dependencies = [
    "typer", "rich", "pydantic", "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"