[project]
name = "thenothing"
version = "4.0.0"
description = "THENOTHING - Autonomous AI Security Intelligence & Orchestration Platform"
requires-python = ">=3.10"
dependencies = [
    "typer", "rich", "pydantic", "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"